# Agents-LLM

demo/: package.json  pyproject.toml
demo/apps/server/src/: main.py
demo/apps/server/src/experts/: service.py
demo/apps/server/src/utils/: websocket_manager.py
demo/common/researcher/: cli.py
demo/common/researcher/llm_provider/openai/: openai.py
demo/common/researcher/master/: actions.py  agent.py  prompts.py
demo/common/researcher/researcher/: research.py
demo/common/researcher/utils/: llm.py
demo/lib/: countries.ts
