[tool.poetry]
name = "between-you-and-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
beautifulsoup4 = "^4.12.3"
requests = "2.31.0"
arxiv = "2.1.0"
colorama = "^0.4.6"
duckduckgo-search = "^6.1.6"
md2pdf = "^1.0.1"
openai = "^1.34.0"
playwright = "^1.44.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
python-multipart = "^0.0.9"
markdown = "^3.6"
langchain = "^0.2.4"
langgraph = "^0.0.69"
langchain-community = "^0.2.4"
langchain-openai = "^0.1.8"
langchain-google-genai = "^1.0.6"
tavily-python = "^0.3.3"
permchain = "^0.0.8"
pymupdf = "^1.24.5"
jinja2 = "^3.1.4"
aiofiles = "^23.2.1"
newspaper3k = "^0.2.8"
sqlalchemy = "^2.0.30"
mistune = "^3.0.2"
htmldocx = "^0.0.6"
python-docx = "^1.1.2"
tiktoken = "^0.7.0"
lxml = { version = "^5.2.2", extras = ["html_clean"] }
lxml-html-clean = "^0.1.1"
langchain-groq = "^0.1.5"
langchain-together = "^0.1.3"
langchain-anthropic = "^0.1.15"
langchain-mistralai = "^0.1.8"
langchain-huggingface = "^0.0.3"
langchain-cohere = "^0.1.8"
langchain-google-vertexai = "^1.0.5"
langchain-fireworks = "^0.1.3"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
